--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                         <p>Los dulces son alimentos que se disfrutan por su sabor dulce y generalmente contienen altas cantidades de azúcar y otros edulcorantes. Los dulces son una parte importante de la cultura alimentaria de muchas sociedades, y hay una gran variedad de dulces disponibles en todo el mundo.<p>
                           </div>
                     <div class="col m-auto">
-                      <img src="dulc.gif" class="h-100 w-100" alt="paisaje gif">
+                      <img src="dulc.gif" class="h-100 w-100" alt="dulces gif">
                     </div>
                 </div>
               
                 <!--2da fila-->   
                 <div class="row bg-white text-dark p-4">
                     <div class="col m-auto">
-                        <img src="frut.gif" class="h-100 w-100" alt="cascada gif">
+                        <img src="frut.gif" class="h-100 w-100" alt="frutas gif">
                     </div>
                     <div class="col m-auto">
                         <h4><span class="text-success">Jugosas y Nutritivas</span> Frutas.</h4>
@@ -142,7 +142,7 @@
                       <p>La carne es un alimento rico en proteínas, hierro y otros nutrientes esenciales que son importantes para el crecimiento y mantenimiento de nuestro cuerpo. Hay varios tipos de carnes, como carne de res, pollo, cerdo, cordero, pescado, etc., cada una con diferentes perfiles nutricionales y de sabor. La mayoría de las carnes también son una buena fuente de vitaminas B, que son esenciales para una buena salud mental y física. </p>
                     </div>
                   <div class="col m-auto">
-                      <img src="carne.gif" class="h-100 w-100" alt="puente gif">
+                      <img src="carne.gif" class="h-100 w-100" alt="carnes gif">
                   </div>
               </div><br>
 
