--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
 
             <div class="row text-center">
                 <div class="m-3 col">
-                  <i class="bi bi-heart-pulse display-4" style="color: red;"></i>
+                  <i class="bi bi-heart-pulse display-4 text-danger"></i>
                     <div class="p h2">SALUDABLES</div>
                     <div class="p h6">Los alimentos, fuente indispensable para la vida.</div>
                 </div>
                 <div class="m-3 col">
-                  <i class="bi bi-globe display-4" style="color: green;"></i>
+                  <i class="bi bi-globe display-4 text-success"></i>
                     <div class="p h2">VARIADOS</div>
                     <div class="p h6">Existen innumerables variedades por todo el mundo.</div>
                 </div>
                 <div class="m-3 col">
-                  <i class="bi bi-info-circle display-4" style="color: blue;"></i>
+                  <i class="bi bi-info-circle display-4 text-info"></i>
                     <div class="p h2">TRADICIONALES</div>
                     <div class="p h6">Elemento tradicional en la cultura mundial</div>
                 </div>
