--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="col text-start m-5">
                   <div class="h4">Cultura<span class="text-warning"> Alimentaria</span></div>
                   <br>
-                  <div class="p">Code be NARS</div>
+                  <div class="p">Code by NARS</div>
                   <div class="p">Todos los derechos reservados</div>
                   <div class="p">Cienfuegos, Cuba</div>
                   <div class="p">Año 2023</div>
